Fixed the (majority) of item sizing/spacing/centering

--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 .container{
-    min-height: 100%;
+    min-height: 100vh;
     font-family: arial,sans-serif;
     font-size: 13px;
     color: #000;
+    position: relative;
+    overflow: hidden;
 }
 
 .display_inline{
@@ -12,13 +14,18 @@
     /*border: solid 1px;*/
     vertical-align: top;
 }
+
+.top_nav_item{
+    display: inline;
+    padding-left: 15px;
+}
 .nav_top{
     float: left;
     height: 50px;
     width: 100%;
-    padding-top: 20px;
+    padding-top: 7px;
     padding-bottom: 10px;
-    margin-bottom: 5%;
+    /*margin-bottom: 5%;*/
     /*border: solid blue 1px;*/
     
 }
@@ -54,19 +61,21 @@
 
 .google_apps{
     display: inline-block;
-    padding: 0 2px 0 2px;
+    padding: 0 15px 0 15px;
     /*border: solid 1px;*/
     margin-top: 10px;
 }
 
 .sign_in{
-    display: inline;
+    display: inline-block;
     background: -moz-linear-gradient(top,#4387fd,#4683ea);
     border: solid 1px #4285f4;
-    padding: 5px;
+    padding: 0 13px;
     color: white;
-    margin-right: 25px;
-    /*height: 20px;*/
+    margin-right: 20px;
+    line-height: 28px;
+    font-weight: bold;
+    border-radius: 2px;
 
 }
 
@@ -74,20 +83,21 @@
     /*border: solid red;*/
     margin: auto;
     width: 50%;
-    height: 100%;
+    padding-bottom: 40px;
+    padding-top: 176px;
 }
 
 .logo{
     /*border: solid;*/
     display: block;
-    padding: 5% 0 2% 5% ;
+    padding:20px 0 2% 5% ;
     margin: auto;
     width: 300px;
 }
 
 .search{
     display: block;
-    margin: 0 auto 20px auto;
+    margin: 10px auto 20px auto;
     height: 44px;
     width: 582px;
     border-radius: 25px;
@@ -105,6 +115,7 @@
     padding: 0;
     border: 0;
     height: 20px;
+    width: 520px;
 
 }
 .enter{
@@ -125,6 +136,7 @@
     border-radius: 5px;
     border: 1px solid #f2f2f2;
     color: #5F6368;
+    font-size: 14px;
 }
 
 .Lucky{
@@ -136,6 +148,7 @@
     border-radius: 5px;
     border: 1px solid #f2f2f2;
     color: #5F6368;
+    font-size: 14px;
 }
 
 .foot{  
@@ -145,18 +158,27 @@
     width: 100%;
     background: #f2f2f2;
     color: #5f6368;
+    float: left;
+    font-size: 14px;
+    margin: 0 auto;
 }
 
 .foot_left{
     display: inline-block;
-    padding-left: 1%;
     height: 40px;
-    padding: 10px 0 0 5px;
-
+    line-height: 40px;
 }
 
 .foot_right{
     float: right;
-    padding: 10px 5px 0 0 ;
+    height: 40px;
+    line-height: 40px;
+    margin-right: 30px;
 }
 
+.foot_item{
+    display: inline-block;
+    padding-left: 27px;
+    margin: 0 !important;
+
+}
